src/index.css
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    height: 100%;
    font-size: 16px;
    max-width: 100%;
    text-align: center;
}

#wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    text-align: left;
    max-width: 2000px;
    margin: 0 auto;
}

header {
    background-color: #257180;
    display: flex;
    justify-content: space-between;
    padding: 5px;
    padding-left: 50px;
    padding-right: 50px;
    align-items: center;
}

main {
    flex-grow: 1;
    background-color: #F2E5BF;
    display: flex;
    justify-content: space-between;
    padding: 10px;
    padding-left: 50px;
    padding-right: 50px;

}

footer {
    background-color: #CB6040;
    text-align: center;
}

button {
    background-color: transparent;
    border: none;
}

button:hover {
    font-weight: bold;
}

h1 {
    font-size: 2.2rem;
    color: #F2E5BF;
    text-shadow:
        1px -1px 0 #CB6040;
    margin-top: 10px;
    margin-bottom: 10px;
}

#github-logo {
    filter: invert(99%) sepia(2%) saturate(4545%) hue-rotate(329deg) brightness(93%) contrast(105%);
}

h2, h3 {
    color: #FD8B51;
}

h2 {
    font-size: 1.8rem;
}

h3 {
    font-
}

#left, #right {
    background-color: #ffffff;
    border-radius: 10px;
    border: 2px solid #CB6040;
    padding: 5px 30px;
    margin: 20px;
}

.regButton {
    background-color: #CB6040;
    color: #F2E5BF;
    border-radius: 5px;
    border: 1px solid #257180;
    padding: 3px;
    margin: 3px;
}

.regButton:hover {
    background-color: #F2E5BF;
    color: #CB6040;
    border-radius: 5px;
    border: 1px solid #257180;
    padding: 3px;
    margin: 3px;
}

#left {
    flex: 1
}

#right {
    flex: 2;
}

form {
    display: flex;
    flex-direction: column;
}

form span {
    display: flex;
    justify-content: space-between;
    margin-bottom: 5px;
}

#resTitle {
    font-weight: 800;
    margin-bottom: 5px;
}

.resDiv {
    display: flex;
    flex-direction: column;
}

textarea {
    width: 100%;
    resize: none;
    overflow-x: auto;
    min-height: 50px;
}


#nameCV, #email-phone {
    text-align: center;
}

#email-phone {
    font-weight: 600;
}

.orangeDot {
    color: #FD8B51;
}

.schoolCV, .positionCV {
    margin-bottom: 5px;
}

.courseCV, .companyCV, .dateCV {
    margin-top: 5px;
    margin-bottom: 5px;
}

#CVview section {
    border-bottom: solid 1px#CB6040;
    margin-bottom: 10px;
}

.respItem, .respItem p {
    margin-top: 8px;
    margin-bottom: 8px;
}

.format {
    font-size: 0.6rem;
}

/* Design for phones */
@media (max-width: 500px) {

}

/* Design for tablets */
@media (max-width: 1000px) {

}

